<resources>
    <string name="app_name">beautynow</string>
    <string name="title_activity_login">login</string>
    <string name="title_activity_cadastrar">cadastrar</string>
    <string name="titulo">Titulo:</string>
    <string name="autor">Autor:</string>
    <string name="editora">Editora:</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="icone">icone</string>
    <string name="nome">nome</string>
    <string name="Acessar">Acessar</string>
    <string name="Cadastrar">Cadastrar</string>
    <string name="cadastrar_se">Cadastrar-se</string>
    <string name="Nome">Nome</string>
    <string name="nameInput" />
    <string name="digite_seu_e_mail">Digite seu e-mail</string>
    <string name="digite_seu_cpf">Digite seu CPF</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="CPF">CPF</string>
    <string name="Email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="Digite_sua_senha">Digite sua senha</string>
    <string name="fornecedor">Fornecedor</string>
    <string name="cliente">Cliente</string>
    <string name="switchcf">switch cliente forncedor</string>
    <string name="tipo">Tipo</string>
    <string name="Repita_sua_senha">Repita sua senha</string>
    <string name="sexo">Sexo</string>

    <string-array name="tipos_usuario">
        <item>Qual seu tipo de usuario?</item>
        <item>Cliente</item>
        <item>Fornecedor</item>
    </string-array>

    <string-array name="sexos">
        <item>Selecione seu genero</item>
        <item>Masculino</item>
        <item>Feminino</item>
        <item>Outros</item>
    </string-array>
    <string name="title_activity_cliente_menu">ClienteMenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_fornecedor_menu">FornecedorMenu</string>
    <string name="digite_seu_CPF">Digite seu CPF</string>
</resources>
