<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="9"
    android:background="@color/white"
    android:layout_centerHorizontal="true"
    tools:context=".gui.usuario.Cadastro">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/icone"
        app:srcCompat="@drawable/icon"
        android:layout_row="0"
        android:layout_columnSpan="2"
        android:layout_gravity="center"
        />

    <EditText
        android:id="@+id/inputNome"
        style="@drawable/bottom_border_input"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_rowSpan="1"
        android:layout_columnSpan="2"
        android:layout_gravity="top|center"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/digite_seu_nome"
        app:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/digite_seu_nome"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:text="@string/nameInput"
        android:textColor="@android:color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/inputCpf"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_row="2"
        android:layout_columnSpan="2"
        android:layout_gravity="top|center"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/digite_seu_cpf"
        android:ems="10"
        android:hint="@string/digite_seu_cpf"
        android:inputType="textPersonName"
        android:maxLength="14"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:backgroundTint="@color/black" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_row="3"
        android:layout_columnSpan="2"
        android:layout_gravity="top|center"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/digite_seu_e_mail"
        app:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/digite_seu_e_mail"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_row="4"
        android:layout_columnSpan="2"
        android:layout_gravity="top|center"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/Digite_sua_senha"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/Digite_sua_senha"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />


    <EditText
        android:id="@+id/rsenha"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_row="5"
        android:layout_columnSpan="2"
        android:layout_gravity="top|center"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="Repita sua senha"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:backgroundTint="#000000" />

    <Spinner
        android:id="@+id/sexo"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_row="6"
        android:layout_columnSpan="2"
        android:layout_gravity="top|center"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:textColor="@color/black" />

    <Spinner
        android:id="@+id/tipo"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_row="7"
        android:layout_columnSpan="2"
        android:layout_gravity="top|center"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="8"
        android:layout_columnSpan="2"
        android:layout_gravity="top|center"
        android:background="@android:color/holo_blue_light"
        android:onClick="cadastrarUsuario"
        android:text="@string/Cadastrar"
        android:textColor="@color/white" />

</GridLayout>